2009-05-26  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Maciej Stachowiak.

        https://bugs.webkit.org/show_bug.cgi?id=23649
        Add layout test for various cases of SQLTransactionErrorCallback
        invocation.

        * storage/transaction-error-callback-expected.txt: Added.
        * storage/transaction-error-callback.html: Added.

2009-05-26  David Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler.

        Fix for bug 25969, scrollbars remain after document shrinks.  Add a couple of layout tests
        written by Dan that show various problems with scrollbars following resizes.

        * fast/dynamic/window-resize-scrollbars-test.html: Added.
        * fast/dynamic/window-scrollbars-test.html: Added.
        * platform/mac/fast/dynamic/window-resize-scrollbars-test-expected.checksum: Added.
        * platform/mac/fast/dynamic/window-resize-scrollbars-test-expected.png: Added.
        * platform/mac/fast/dynamic/window-resize-scrollbars-test-expected.txt: Added.
        * platform/mac/fast/dynamic/window-scrollbars-test-expected.checksum: Added.
        * platform/mac/fast/dynamic/window-scrollbars-test-expected.png: Added.
        * platform/mac/fast/dynamic/window-scrollbars-test-expected.txt: Added.

2009-05-25  Adam Barth  <abarth@webkit.og>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=26006

        Test our use of dynamicGlobalObject and lexicalGlobalObject for
        window.location.

        * http/tests/security/frameNavigation/context-for-location-assign-expected.txt: Added.
        * http/tests/security/frameNavigation/context-for-location-assign.html: Added.
        * http/tests/security/frameNavigation/context-for-location-expected.txt: Added.
        * http/tests/security/frameNavigation/context-for-location-href-expected.txt: Added.
        * http/tests/security/frameNavigation/context-for-location-href.html: Added.